--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "MIT",
   "workspaces": {
     "packages": [
-      "packages/**"
+      "packages/native",
+      "packages/shared",
+      "packages/web"
     ],
     "nohoist": [
       "**/react-native",
@@ -16,8 +18,8 @@
   },
   "scripts": {
     "run:web": "yarn workspace web start",
-    "run:native:ios": "yarn workspace reactnative react-native run-ios",
-    "run:native:android": "yarn workspace reactnative react-native run-android",
+    "run:native:ios": "yarn workspace app react-native run-ios",
+    "run:native:android": "yarn workspace app react-native run-android",
 
     "reset:modules": "rm -rf node_modules/ yarn.lock packages/*/node_modules",
     "reset:yarn": "yarn cache clean",
