--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,5 +1,7 @@
 {
   "name": "@monoexample/shared",
-  "main": "index.ts",
-  "version": "0.0.1"
+  "main": "index.js",
+  "version": "0.0.1",
+  "dependencies": {
+  }
 }
