--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.58.4",
     "redux": "4.0.1",
     "react-redux": "6.0.0",
+    "redux-thunk": "2.3.0",
     "@monoexample/shared": "0.0.1"
   },
   "devDependencies": {
