--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "reset": "yarn reset:modules && yarn reset:cache"
   },
   "devDependencies": {
-    "eslint": "^5.14.1",
+    "eslint": "5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-import": "^2.14.0",
