--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -7,20 +7,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@monoexample/shared": "0.0.1",
     "react": "16.6.3",
     "react-native": "0.58.4",
-    "redux": "4.0.1",
     "react-redux": "6.0.0",
+    "redux": "4.0.1",
     "redux-thunk": "2.3.0",
-    "@monoexample/shared": "0.0.1"
+    "styled-components": "^4.1.3"
   },
   "devDependencies": {
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "24.1.0",
     "jest": "24.1.0",
     "metro-react-native-babel-preset": "0.51.1",
-    "react-test-renderer": "16.6.3",
-    "react-native-monorepo-helper": "0.2.4"
+    "react-native-monorepo-helper": "0.2.4",
+    "react-test-renderer": "16.6.3"
   },
   "jest": {
     "preset": "react-native"
