added styled-components to the web

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nohoist": [
       "**/react-native",
       "**/react-native/**",
+      "**/styled-components",
       "**/jest"
     ]
   },
