--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@monoexample/shared": "0.0.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
     "react-scripts": "2.1.5",
-    "@monoexample/shared": "0.0.1"
+    "styled-components": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
