--- a/packages/native/package.json
+++ b/packages/native/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@monoexample/shared": "0.0.1",
+    "prop-types": "^15.7.2",
     "react": "16.6.3",
     "react-native": "0.58.4",
     "react-redux": "6.0.0",
