added jest, babel and tests to shared code

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -4,5 +4,11 @@
   "version": "0.0.1",
   "dependencies": {
     "reselect": "^4.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-jest": "^24.1.0",
+    "jest": "^24.1.0"
   }
 }
