--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -5,10 +5,15 @@
   "dependencies": {
     "reselect": "^4.0.0"
   },
+  "scripts": {
+    "test": "jest"
+  },
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
     "babel-jest": "^24.1.0",
-    "jest": "^24.1.0"
+    "jest": "^24.1.0",
+    "redux-mock-store": "^1.5.3",
+    "redux-thunk": "^2.3.0"
   }
 }
